--- a/testbook.ipynb
+++ b/testbook.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -14,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import collections"
@@ -25,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -67,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -75,11 +71,11 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/tyler/git/albokeh/data/d1.RDF',\n",
-       " '(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+']"
+       "['(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+',\n",
+       " '/home/tyler-biggs/git/albokeh/data/d1.RDF']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +96,7 @@
        "['(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -146,6 +142,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
