--- a/testbook.ipynb
+++ b/testbook.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -12,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "main()  # Creates the metadata.json and writes the file\n",
@@ -42,8 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s_dict = {'annotationValue': 'Simulated RDF'}\n",
@@ -52,8 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -71,11 +78,10 @@
     {
      "data": {
       "text/plain": [
-       "['(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+',\n",
-       " '/home/tyler-biggs/git/albokeh/data/d1.RDF']"
+       "['/Users/tyler/albokeh/data/d1.RDF', '(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +102,7 @@
        "['(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,8 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -118,13 +125,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# create_pandas_dataframe(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crawl_assay_for_term_source_match(assay_metadata):\n",
+    "    for char_entry in assay_metadata[\"characteristicCategories\"]:\n",
+    "        # Check the termSource to ensure the desired key is being examined\n",
+    "#         print(char_entry[\"characteristicType\"])\n",
+    "        if char_entry[\"characteristicType\"]['termSource'] == \"Inter-atom distances\":\n",
+    "            print(char_entry[\"characteristicType\"]['annotationValue'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Al-Ob\n",
+      "Al-Oh\n"
+     ]
+    }
+   ],
+   "source": [
+    "crawl_assay_for_term_source_match(found_df_objs[0]['assay_md'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'characteristicCategories': [{'@id': '#4522431992',\n",
+       "   'characteristicType': {'@id': '#4522431992',\n",
+       "    'annotationValue': 'Al-Ob',\n",
+       "    'termAccession': '',\n",
+       "    'termSource': 'Inter-atom distances'}},\n",
+       "  {'@id': '#4522432048',\n",
+       "   'characteristicType': {'@id': '#4522432048',\n",
+       "    'annotationValue': 'Al-Oh',\n",
+       "    'termAccession': '',\n",
+       "    'termSource': 'Inter-atom distances'}}],\n",
+       " 'comments': [],\n",
+       " 'dataFiles': [{'@id': '#data/maxime-rdf-4522433280',\n",
+       "   'comments': [],\n",
+       "   'name': '/Users/tyler/albokeh/data/d1.RDF',\n",
+       "   'type': 'Maxime-RDF'}],\n",
+       " 'filename': '',\n",
+       " 'materials': {'otherMaterials': [],\n",
+       "  'samples': [{'@id': '#sample/4522430816',\n",
+       "    'characteristics': [],\n",
+       "    'factorValues': [],\n",
+       "    'name': '(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+'}]},\n",
+       " 'measurementType': {'@id': '#4522431600',\n",
+       "  'annotationValue': 'Simulated RDF',\n",
+       "  'termAccession': '',\n",
+       "  'termSource': 'Simulated Data'},\n",
+       " 'processSequence': [],\n",
+       " 'technologyPlatform': 'To be filled out.',\n",
+       " 'technologyType': {'@id': '#4522431600',\n",
+       "  'annotationValue': 'Simulated RDF',\n",
+       "  'termAccession': '',\n",
+       "  'termSource': 'Simulated Data'},\n",
+       " 'unitCategories': [{'@id': '#4522431712',\n",
+       "   'annotationValue': 'Angstroms',\n",
+       "   'termAccession': '',\n",
+       "   'termSource': 'Inter-atom distances'}]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "found_df_objs[0]['assay_md']"
    ]
   },
   {
@@ -153,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
