working! Most excellent

--- a/testbook.ipynb
+++ b/testbook.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -14,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "main()  # Creates the metadata.json and writes the file\n",
@@ -46,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "s_dict = {'annotationValue': 'Simulated RDF'}\n",
@@ -58,9 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -70,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -78,10 +71,11 @@
     {
      "data": {
       "text/plain": [
-       "['/Users/tyler/albokeh/data/d1.RDF', '(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+']"
+       "['(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+',\n",
+       " '/home/tyler-biggs/git/albokeh/data/d1.RDF']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +96,7 @@
        "['(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,9 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -125,9 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -169,64 +161,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'characteristicCategories': [{'@id': '#4522431992',\n",
-       "   'characteristicType': {'@id': '#4522431992',\n",
-       "    'annotationValue': 'Al-Ob',\n",
-       "    'termAccession': '',\n",
-       "    'termSource': 'Inter-atom distances'}},\n",
-       "  {'@id': '#4522432048',\n",
-       "   'characteristicType': {'@id': '#4522432048',\n",
-       "    'annotationValue': 'Al-Oh',\n",
-       "    'termAccession': '',\n",
-       "    'termSource': 'Inter-atom distances'}}],\n",
+       "{'@id': '#data/maxime-rdf-140687074911120',\n",
        " 'comments': [],\n",
-       " 'dataFiles': [{'@id': '#data/maxime-rdf-4522433280',\n",
-       "   'comments': [],\n",
-       "   'name': '/Users/tyler/albokeh/data/d1.RDF',\n",
-       "   'type': 'Maxime-RDF'}],\n",
-       " 'filename': '',\n",
-       " 'materials': {'otherMaterials': [],\n",
-       "  'samples': [{'@id': '#sample/4522430816',\n",
-       "    'characteristics': [],\n",
-       "    'factorValues': [],\n",
-       "    'name': '(OH)3Al-O-Al(OH)32-+ 180 H2O + 2 Na+'}]},\n",
-       " 'measurementType': {'@id': '#4522431600',\n",
-       "  'annotationValue': 'Simulated RDF',\n",
-       "  'termAccession': '',\n",
-       "  'termSource': 'Simulated Data'},\n",
-       " 'processSequence': [],\n",
-       " 'technologyPlatform': 'To be filled out.',\n",
-       " 'technologyType': {'@id': '#4522431600',\n",
-       "  'annotationValue': 'Simulated RDF',\n",
-       "  'termAccession': '',\n",
-       "  'termSource': 'Simulated Data'},\n",
-       " 'unitCategories': [{'@id': '#4522431712',\n",
-       "   'annotationValue': 'Angstroms',\n",
-       "   'termAccession': '',\n",
-       "   'termSource': 'Inter-atom distances'}]}"
+       " 'name': '/home/tyler-biggs/git/albokeh/data/d1.RDF',\n",
+       " 'type': 'Maxime-RDF'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "found_df_objs[0]['assay_md']"
+    "found_df_objs[0]['dataFile']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -247,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
